# SnakeBot

./: building2_robot copy.sdf  figure_out_snake_v1.py  figure_out_snake_v5.py  figure_out_snake_v6.1.py  newsnake.urdf  robot_pose.txt  snake_bot.launch.py
Controls/: figure_out_snake_v2.py  figure_out_snake_v6(Fsolve is kachra).py  figure_out_snake_v6.2.py  figure_out_snake_v7.1.py  figure_out_snake_v7.2 PySerial.py  figure_out_snake_v7.py
Controls/Arduino Controller/: 90Deg.ino  (+2 more)
Mujoco/: chintu.stl  danda support.stl  danda.stl  snakebot module.stl
Positioning/: marks.py
Snakebot PCB/: Snakebot PCB.kicad_sch
esp_newcode/: controlerr.py  controller_full.py  controller_full2.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
myenv/: pyvenv.cfg
myenv_new/: pyvenv.cfg
snake_pcb_3/: _autosave-snake_pcb_3.kicad_prl  fp-info-cache  snake_pcb_3-B_Cu.gbr  snake_pcb_3-B_Mask.gbr  snake_pcb_3-B_Paste.gbr  snake_pcb_3-B_Silkscreen.gbr  snake_pcb_3-Edge_Cuts.gbr  snake_pcb_3-F_Cu.gbr  snake_pcb_3-F_Mask.gbr  snake_pcb_3-F_Paste.gbr  snake_pcb_3-F_Silkscreen.gbr  snake_pcb_3-NPTH.drl  snake_pcb_3-PTH.drl  snake_pcb_3-job.gbrjob  snake_pcb_3.kicad_pcb  snake_pcb_3.kicad_prl  snake_pcb_3.kicad_pro  snake_pcb_3.kicad_sch
snake_robot_harmonic_ws/: README.md  directory_structure.txt  fileDescriptor.py  mod_generator.py  output.txt  requirements.txt  requirements_mujoco_ENV.txt
snake_robot_harmonic_ws/src/ros_gz_example_application/: CMakeLists.txt
snake_robot_harmonic_ws/src/ros_gz_example_application/src/: angle_viz.py
(+250 files in other folders)
